# Multi-agent-negotiation-system

./: calendar_credentials.json  calendar_token.json  client_secret_287440476338-njd85ng1uu56ontjt46gllm6qgtitl5d.apps.googleusercontent.com.json  index.py  main.py  pyproject.toml  setup_calendar_auth.py
agents/: base.py  calendar_agent.py  gmail_agent.py  search_agent.py
environment/: negotiation_environment.py
services/: embedding_service.py  llm_service.py
strategy/: negotiation_strategy.py  simple.py
